eglibc (2.10.2-4) UNRELEASED; urgency=low

  [ Samuel Thibault ]
  * testsuite-checking/expected-results-i486-linux-gnu-libc: Add
    tst-atime.out failure.

 -- Aurelien Jarno <aurel32@debian.org>  Sun, 03 Jan 2010 14:21:20 +0100

eglibc (2.10.2-3) unstable; urgency=low

  [ Aurelien Jarno ]
  * Update from the latest SVN, branch eglibc-2_11:
    - Remove any/cvs-malloc-check.diff (merged upstream).
  * debhelper.in/libc.postinst: also restart incron on upgrade.  Closes:
    #557801.
  * debhelper.in/libc.postinst: restart the services instead of stopping
    them and then starting them again.  Closes: #211784.
  * Use gcc/g++-4.4 on hppa, hurd-i386, mips and mipsel.
  * Mention EGLIBC in packages description.  Closes: #559121.
  * Add support for sparc64 architecture. 
  * debian/sysdeps/mips.mk, debian/sysdeps/mipsel.mk: remove hack to support
    buildds kernels now that they have been upgraded.
  * debian/control.in/main: add a Homepage: pseudo header.  Closes: #561034.
  * debian/local/manpages/gai.conf.5: fix a typo.  Closes: #560144. 
  * Replace debian/any/submitted-nis-not-configured.diff by upstream patch
    debian/any/cvs-nis-not-configured.diff.
  * Add debian/patches/any/local-ntp-update.diff to partially update the NTP
    API, backported from upstream.  Closes: #559482.
  * Add debian/patches/any/cvs-malloc_info-output.diff from upstream to fix
    malloc_info() output.  Closes: #562678.
  * Add debian/patches/any/cvs-futimens.diff from upstream to correctly handle
    AT_FDCWD in futimens().

  [ Samuel Thibault ]
  * testsuite-checking/expected-results-i486-linux-gnu-libc: Add hurd-i386
    testsuite results.
  * sysdeps/hurd.mk: Enable testsuite.
  * patches/hurd-i386/submitted-getcwd.diff: Add patch to fix duplicate port
    deallocation.
  * patches/hurd-i386/submitted-setsid.diff: Add patch to fix bogus port
    deallocation.

  [ Petr Salinger]
  * kfreebsd/local-sysdeps.diff: update to revision 2904 (from glibc-bsd).
