@@ -611,7 +611,7 @@ Description: GNU C Library: 32bit development libraries for AMD64
  library, meant for AMD64 systems.
 
 Package: libc6-sparcv9b
-Architecture: sparc
+Architecture: sparc sparc64
 Section: libs
 Priority: extra
 Pre-Depends: libc6 (= ${binary:Version})
