@@ -1,5 +1,5 @@
 Package: libc6-sparcv9b
-Architecture: sparc
+Architecture: sparc sparc64
 Section: libs
 Priority: extra
 Pre-Depends: libc6 (= ${binary:Version})
