@@ -4,7 +4,7 @@ DEB_ARCH_REGULAR_PACKAGES += libc6-sparcv9b
 sparcv9b_add-ons = nptl $(add-ons)
 sparcv9b_configure_target=sparcv9b-linux-gnu
 sparcv9b_configure_build=sparcv9b-linux-gnu
-sparcv9b_extra_cflags = -mtune=ultrasparc3
+sparcv9b_extra_cflags = -mcpu=ultrasparc3
 sparcv9b_extra_config_options = $(extra_config_options) --disable-profile
 sparcv9b_rtlddir = /lib
 sparcv9b_slibdir = /lib/ultra3
