@@ -4,7 +4,10 @@ eglibc (2.10.2-4) UNRELEASED; urgency=low
   * testsuite-checking/expected-results-i486-linux-gnu-libc: Add
     tst-atime.out failure.
 
- -- Aurelien Jarno <aurel32@debian.org>  Sun, 03 Jan 2010 14:21:20 +0100
+  [ Aurelien Jarno ]
+  * Also build a libc6-sparcv9b package on sparc64. 
+
+ -- Aurelien Jarno <aurel32@debian.org>  Mon, 04 Jan 2010 13:00:54 +0100
 
 eglibc (2.10.2-3) unstable; urgency=low
 
